fix : FlagRepository의 countFlagNum 메서드 에러 수정